--- a/index.html
+++ b/index.html
@@ -2,258 +2,237 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Fence & Deck Estimator</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Fence Quote Estimator</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
     body {
-      font-family: 'Montserrat', Arial, sans-serif;
-      padding: 40px 20px;
-      background: linear-gradient(135deg, #1e3c72, #2a5298);
-      color: #333;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background: #f2f2f2;
     }
-
-    .widget {
-      max-width: 480px;
-      width: 100%;
+    .container {
+      max-width: 600px;
+      margin: auto;
       background: #fff;
-      padding: 30px 35px;
-      border-radius: 16px;
-      box-shadow:
-        0 12px 24px rgba(0, 0, 0, 0.15),
-        0 8px 12px rgba(0, 0, 0, 0.1);
-      transition: box-shadow 0.3s ease;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     }
-    .widget:hover {
-      box-shadow:
-        0 18px 36px rgba(0, 0, 0, 0.25),
-        0 12px 18px rgba(0, 0, 0, 0.15);
+    h2 {
+      text-align: center;
+      color: #2a9d8f;
     }
-
     label {
-      font-weight: 600;
-      font-size: 1.1rem;
-      margin-top: 12px;
       display: block;
-      color: #222;
-    }
-
-    .step {
-      display: none;
       margin-top: 15px;
     }
-
+    select, input[type="number"], input[type="text"], input[type="tel"] {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+    button {
+      margin-top: 20px;
+      padding: 12px 20px;
+      background-color: #2a9d8f;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      width: 100%;
+      font-size: 16px;
+    }
+    button:hover {
+      background-color: #21867a;
+    }
+    .step {
+      display: none;
+    }
     .step.active {
       display: block;
     }
-
-    select.input,
-    input.input[type="number"],
-    input.input[type="text"],
-    input.input[type="email"] {
-      width: 100%;
-      padding: 12px 15px;
-      margin-top: 6px;
-      border: 2px solid #ced4da;
-      border-radius: 8px;
-      font-size: 1rem;
-      transition: border-color 0.3s ease;
-      outline-offset: 2px;
-    }
-
-    select.input:focus,
-    input.input:focus {
-      border-color: #007bff;
-      box-shadow: 0 0 8px rgba(0, 123, 255, 0.3);
-      outline: none;
-    }
-
-    .button {
-      margin-top: 25px;
-      width: 100%;
-      padding: 14px 0;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      font-size: 1.15rem;
-      font-weight: 600;
-      cursor: pointer;
-      box-shadow: 0 4px 14px rgba(0, 123, 255, 0.5);
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .button:hover {
-      background-color: #0056b3;
-      box-shadow: 0 6px 20px rgba(0, 86, 179, 0.7);
-    }
-
-    .output {
-      font-weight: 700;
-      margin-top: 25px;
-      font-size: 1.5rem;
-      color: #28a745;
-      text-align: center;
-    }
-
-    .quote-summary {
+    .summary {
+      background: #e9f5f3;
+      padding: 15px;
       margin-top: 20px;
-      padding: 20px;
-      background-color: #f1f3f5;
-      border-radius: 12px;
-      font-size: 1rem;
-      color: #333;
-      line-height: 1.5;
-    }
-    .quote-summary h3 {
-      margin-top: 0;
-      color: #007bff;
-    }
-    .quote-summary p {
-      margin: 5px 0;
-    }
-
-    .powered-by {
-      margin-top: 35px;
-      font-size: 0.9rem;
-      color: #eee;
-      font-weight: 600;
-      font-style: italic;
-      text-align: center;
-      user-select: none;
-      letter-spacing: 0.04em;
-      opacity: 0.7;
-    }
-
-    .powered-by span {
-      color: #00aaff;
-      font-weight: 700;
+      border-radius: 6px;
     }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script>
+    (function () {
+      emailjs.init("LexnDqcUoDYCqugLi"); // Your Public Key
+    })();
+  </script>
 </head>
 <body>
-  <div class="widget" role="main">
-    <div id="step1" class="step active">
-      <label for="service">What service do you need?</label>
-      <select class="input" id="service">
-        <option value="fence">Fencing</option>
-        <option value="deck">Deck</option>
-      </select>
-      <button class="button" onclick="nextStep(2)">Next</button>
-    </div>
 
-    <div id="step2" class="step">
-      <div id="fence-questions">
-        <label for="fenceType">Fence Type:</label>
-        <select class="input" id="fenceType">
-          <option value="wood">Wood ($30/ft)</option>
-          <option value="vinyl">Vinyl ($45/ft)</option>
-          <option value="chainlink">Chainlink ($25/ft)</option>
-        </select>
+<div class="container">
+  <h2>Get Your Fence Quote</h2>
 
-        <label for="fenceHeight">Fence Height:</label>
-        <select class="input" id="fenceHeight">
-          <option value="4">4 ft</option>
-          <option value="6" selected>6 ft (standard)</option>
-          <option value="8">8 ft</option>
-        </select>
-
-        <label for="postMaterial">Post Material:</label>
-        <select class="input" id="postMaterial">
-          <option value="wood">Wood (no extra)</option>
-          <option value="metal">Metal (+$10/ft)</option>
-        </select>
-
-        <label for="fenceLength">Length (ft):</label>
-        <input type="number" class="input" id="fenceLength" min="0" />
-
-        <label for="gates">Gates:</label>
-        <input type="number" class="input" id="gates" min="0" value="0" />
-
-        <label for="fenceRemoval">Old Fence Removal?</label>
-        <select class="input" id="fenceRemoval">
-          <option value="yes">Yes</option>
-          <option value="no">No</option>
-        </select>
-      </div>
-
-      <button class="button" onclick="nextStep(3)">Next</button>
-    </div>
-
-    <div id="step3" class="step">
-      <label for="userName">Your Name:</label>
-      <input type="text" class="input" id="userName" required />
-
-      <label for="userPhone">Phone Number:</label>
-      <input type="text" class="input" id="userPhone" required />
-
-      <button class="button" onclick="calculateQuote()">Get My Quote</button>
-    </div>
-
-    <div id="step4" class="step">
-      <div class="output" id="quoteOutput"></div>
-      <div class="quote-summary" id="quoteSummary"></div>
-      <button class="button" onclick="window.print()">Download Quote (PDF)</button>
-    </div>
+  <!-- Step 1: Choose Service -->
+  <div class="step active" id="step1">
+    <label>Select Service</label>
+    <select id="service">
+      <option value="fence">Fence Installation</option>
+    </select>
+    <button onclick="nextStep(2)">Next</button>
   </div>
 
-  <div class="powered-by">Powered by <span>Droply</span></div>
+  <!-- Step 2: Fence Details -->
+  <div class="step" id="step2">
+    <label>Fence Type</label>
+    <select id="fenceType">
+      <option value="wood">Wood</option>
+      <option value="vinyl">Vinyl</option>
+      <option value="chainlink">Chain Link</option>
+    </select>
 
-  <script>
-    function nextStep(stepNum) {
-      document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
-      document.getElementById('step' + stepNum).classList.add('active');
+    <label>Fence Height (ft)</label>
+    <input type="number" id="fenceHeight" min="4" max="8" value="6">
 
-      if (stepNum === 2) {
-        const service = document.getElementById('service').value;
-        document.getElementById('fence-questions').style.display = service === 'fence' ? 'block' : 'none';
-      }
-    }
+    <label>Post Material</label>
+    <select id="postMaterial">
+      <option value="wood">Wood</option>
+      <option value="metal">Metal</option>
+    </select>
 
-    function calculateQuote() {
-      let total = 0;
-      const service = document.getElementById('service').value;
-      let summaryHTML = '<h3>Quote Summary</h3>';
+    <label>Total Fence Length (ft)</label>
+    <input type="number" id="fenceLength" placeholder="e.g. 100">
 
-      if (service === 'fence') {
-        const type = document.getElementById('fenceType').value;
-        const height = parseInt(document.getElementById('fenceHeight').value);
-        const postMaterial = document.getElementById('postMaterial').value;
-        const length = parseInt(document.getElementById('fenceLength').value) || 0;
-        const gates = parseInt(document.getElementById('gates').value) || 0;
-        const removal = document.getElementById('fenceRemoval').value;
-        const prices = { wood: 30, vinyl: 45, chainlink: 25 };
+    <label>Number of Gates</label>
+    <input type="number" id="gates" placeholder="e.g. 1">
 
-        let pricePerFoot = prices[type];
-        if (height > 6) pricePerFoot += 5;
-        if (postMaterial === 'metal') pricePerFoot += 10;
+    <label>Do you need old fence removed?</label>
+    <select id="fenceRemoval">
+      <option value="no">No</option>
+      <option value="yes">Yes</option>
+    </select>
 
-        total = pricePerFoot * length + (gates * 150);
-        if (removal === 'yes') total += 8 * length;
+    <button onclick="nextStep(3)">Next</button>
+  </div>
 
-        summaryHTML += `
-          <p><strong>Name:</strong> ${document.getElementById('userName').value}</p>
-          <p><strong>Phone:</strong> ${document.getElementById('userPhone').value}</p>
-          <p><strong>Service:</strong> Fence</p>
-          <p><strong>Fence Type:</strong> ${type}</p>
-          <p><strong>Height:</strong> ${height} ft</p>
-          <p><strong>Post Material:</strong> ${postMaterial}</p>
-          <p><strong>Length:</strong> ${length} ft</p>
-          <p><strong>Gates:</strong> ${gates}</p>
-          <p><strong>Old Fence Removal:</strong> ${removal}</p>
-          <p><strong>Quote Created At:</strong> ${new Date().toLocaleString()}</p>
-        `;
-      }
+  <!-- Step 3: Name + Phone -->
+  <div class="step" id="step3">
+    <label>Your Name</label>
+    <input type="text" id="userName" placeholder="John Doe" required>
 
-      document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
-      document.getElementById('step4').classList.add('active');
-      document.getElementById('quoteOutput').textContent = `Estimated Cost: $${total.toLocaleString()} CAD`;
-      document.getElementById('quoteSummary').innerHTML = summaryHTML;
-    }
-  </script>
+    <label>Your Phone</label>
+    <input type="tel" id="userPhone" placeholder="(555) 555-5555" required>
+
+    <button onclick="calculateQuote()">Get My Quote</button>
+  </div>
+
+  <!-- Step 4: Output -->
+  <div class="step" id="step4">
+    <h3 id="quoteOutput"></h3>
+    <div class="summary" id="quoteSummary"></div>
+    <button onclick="downloadPDF()">Download PDF</button>
+  </div>
+</div>
+
+<script>
+  function nextStep(step) {
+    document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
+    document.getElementById('step' + step).classList.add('active');
+  }
+
+  function calculateQuote() {
+    let total = 0;
+    const service = document.getElementById('service').value;
+    const name = document.getElementById('userName').value;
+    const phone = document.getElementById('userPhone').value;
+    const type = document.getElementById('fenceType').value;
+    const height = parseInt(document.getElementById('fenceHeight').value);
+    const postMaterial = document.getElementById('postMaterial').value;
+    const length = parseInt(document.getElementById('fenceLength').value) || 0;
+    const gates = parseInt(document.getElementById('gates').value) || 0;
+    const removal = document.getElementById('fenceRemoval').value;
+
+    const prices = { wood: 30, vinyl: 45, chainlink: 25 };
+    let pricePerFoot = prices[type];
+    if (height > 6) pricePerFoot += 5;
+    if (postMaterial === 'metal') pricePerFoot += 10;
+
+    total = pricePerFoot * length + (gates * 150);
+    if (removal === 'yes') total += 8 * length;
+
+    const summary = `
+Name: ${name}
+Phone: ${phone}
+Service: Fence
+Fence Type: ${type}
+Height: ${height} ft
+Post Material: ${postMaterial}
+Length: ${length} ft
+Gates: ${gates}
+Old Fence Removal: ${removal}
+`;
+
+    document.getElementById('quoteOutput').textContent = `Estimated Cost: $${total.toLocaleString()} CAD`;
+    document.getElementById('quoteSummary').innerHTML = summary.replace(/\n/g, '<br>');
+
+    emailjs.send("service_p70pt76", "template_6ivswkm", {
+      user_name: name,
+      user_phone: phone,
+      service: service,
+      quote_date: new Date().toLocaleString(),
+      quote_total: `$${total.toLocaleString()} CAD`,
+      quote_details: summary
+    }).then(() => {
+      console.log("Email sent");
+    }).catch(err => {
+      console.error("Email failed", err);
+    });
+
+    nextStep(4);
+  }
+
+  async function downloadPDF() {
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+
+    const name = document.getElementById('userName').value || 'Customer';
+    const phone = document.getElementById('userPhone').value || 'N/A';
+    const quote = document.getElementById('quoteOutput').textContent;
+    const summary = document.getElementById('quoteSummary').innerText;
+
+    doc.setFillColor(42, 157, 143);
+    doc.rect(0, 0, 210, 20, 'F');
+    doc.setTextColor(255, 255, 255);
+    doc.setFontSize(18);
+    doc.text("Fence Quote Estimate", 105, 13, null, null, 'center');
+
+    doc.setTextColor(0);
+    doc.setFontSize(14);
+    doc.text("Customer Information", 14, 30);
+    doc.setFontSize(12);
+    doc.text(`Name: ${name}`, 14, 38);
+    doc.text(`Phone: ${phone}`, 14, 45);
+    doc.text(`Date: ${new Date().toLocaleDateString()}`, 14, 52);
+
+    doc.setFontSize(14);
+    doc.text("Project Details", 14, 65);
+    doc.setFontSize(12);
+    const lines = doc.splitTextToSize(summary, 180);
+    doc.text(lines, 14, 72);
+
+    doc.setFontSize(14);
+    doc.text("Estimated Cost", 14, 140);
+    doc.setFontSize(16);
+    doc.setTextColor(42, 157, 143);
+    doc.text(quote, 14, 148);
+
+    doc.setFontSize(10);
+    doc.setTextColor(150);
+    doc.text("This quote is an estimate and may vary after site inspection.", 14, 280);
+
+    doc.save("Fence_Quote.pdf");
+  }
+</script>
+
 </body>
 </html>
