--- a/index.html
+++ b/index.html
@@ -1,149 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fence Quote Estimator</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background: #f2f2f2;
-    }
-    .container {
-      max-width: 600px;
-      margin: auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-    }
-    h2 {
-      text-align: center;
-      color: #2a9d8f;
-    }
-    label {
-      display: block;
-      margin-top: 15px;
-    }
-    select, input[type="number"], input[type="text"], input[type="tel"] {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    button {
-      margin-top: 20px;
-      padding: 12px 20px;
-      background-color: #2a9d8f;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      width: 100%;
-      font-size: 16px;
-    }
-    button:hover {
-      background-color: #21867a;
-    }
-    .step {
-      display: none;
-    }
-    .step.active {
-      display: block;
-    }
-    .summary {
-      background: #e9f5f3;
-      padding: 15px;
-      margin-top: 20px;
-      border-radius: 6px;
-    }
-  </style>
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script>
-    (function () {
-      emailjs.init("LexnDqcUoDYCqugLi"); // Your Public Key
-    })();
-  </script>
-</head>
-<body>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Fence Quote Estimator</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    background: #f7f3ee;
+  }
+  .container {
+    max-width: 600px;
+    margin: auto;
+    background: #fff;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+    position: relative;
+  }
+  .logo-wrapper {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
+  .logo {
+    width: 200px;
+    height: auto;
+  }
+  h2 {
+    text-align: center;
+    color: #5e3d1b;
+    margin-top: 0;
+  }
+  label {
+    display: block;
+    margin-top: 15px;
+    font-weight: bold;
+    color: #4a2f17;
+  }
+  select,
+  input[type="number"],
+  input[type="text"],
+  input[type="tel"],
+  input[type="email"] {
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    background: #fffaf5;
+    font-size: 16px;
+  }
+  button {
+    margin-top: 20px;
+    padding: 12px 20px;
+    background-color: #8b5e3c;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  button:hover {
+    background-color: #6e4428;
+  }
+  .btn-group {
+    display: flex;
+    justify-content: space-between;
+  }
+  .step {
+    display: none;
+  }
+  .step.active {
+    display: block;
+  }
+  .summary {
+    background: #fffaf5;
+    padding: 15px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 1px solid #e0d2c0;
+  }
+  .footer {
+    text-align: center;
+    margin-top: 30px;
+    font-size: 14px;
+    color: #888;
+  }
+</style>
 
-<div class="container">
-  <h2>Get Your Fence Quote</h2>
+<!-- EmailJS SDK -->
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
-  <!-- Step 1: Choose Service -->
-  <div class="step active" id="step1">
-    <label>Select Service</label>
-    <select id="service">
-      <option value="fence">Fence Installation</option>
-    </select>
-    <button onclick="nextStep(2)">Next</button>
-  </div>
-
-  <!-- Step 2: Fence Details -->
-  <div class="step" id="step2">
-    <label>Fence Type</label>
-    <select id="fenceType">
-      <option value="wood">Wood</option>
-      <option value="vinyl">Vinyl</option>
-      <option value="chainlink">Chain Link</option>
-    </select>
-
-    <label>Fence Height (ft)</label>
-    <input type="number" id="fenceHeight" min="4" max="8" value="6">
-
-    <label>Post Material</label>
-    <select id="postMaterial">
-      <option value="wood">Wood</option>
-      <option value="metal">Metal</option>
-    </select>
-
-    <label>Total Fence Length (ft)</label>
-    <input type="number" id="fenceLength" placeholder="e.g. 100">
-
-    <label>Number of Gates</label>
-    <input type="number" id="gates" placeholder="e.g. 1">
-
-    <label>Do you need old fence removed?</label>
-    <select id="fenceRemoval">
-      <option value="no">No</option>
-      <option value="yes">Yes</option>
-    </select>
-
-    <button onclick="nextStep(3)">Next</button>
-  </div>
-
-  <!-- Step 3: Name + Phone -->
-  <div class="step" id="step3">
-    <label>Your Name</label>
-    <input type="text" id="userName" placeholder="John Doe" required>
-
-    <label>Your Phone</label>
-    <input type="tel" id="userPhone" placeholder="(555) 555-5555" required>
-
-    <button onclick="calculateQuote()">Get My Quote</button>
-  </div>
-
-  <!-- Step 4: Output -->
-  <div class="step" id="step4">
-    <h3 id="quoteOutput"></h3>
-    <div class="summary" id="quoteSummary"></div>
-    <button onclick="downloadPDF()">Download PDF</button>
-  </div>
-</div>
+<!-- jsPDF for PDF generation -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <script>
-  function nextStep(step) {
-    document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
-    document.getElementById('step' + step).classList.add('active');
+  // Initialize EmailJS service
+  (function(){
+    emailjs.init("LexnDqcUoDYCqugLi"); // <-- Replace with your EmailJS user ID if different
+  })();
+
+  // Function to show step by id and hide others
+  function showStep(stepNum) {
+    document.querySelectorAll('.step').forEach(step => {
+      step.classList.remove('active');
+    });
+    const step = document.getElementById('step' + stepNum);
+    if (step) step.classList.add('active');
   }
 
+  // Shortcut functions for navigation
+  function nextStep(stepNum) {
+    showStep(stepNum);
+  }
+  function prevStep(stepNum) {
+    showStep(stepNum);
+  }
+
+  // Validate Step 2 inputs before going to Step 3
+  function validateStep2AndNext() {
+    const fenceLengthInput = document.getElementById('fenceLength');
+    const fenceHeightInput = document.getElementById('fenceHeight');
+    const service = document.getElementById('service').value;
+
+    const length = fenceLengthInput.value.trim();
+    const height = fenceHeightInput.value.trim();
+
+    if (length === '' || isNaN(length) || Number(length) <= 0) {
+      alert('Please enter a valid fence length greater than 0.');
+      fenceLengthInput.focus();
+      return;
+    }
+
+    // Only validate height if service is Fence Installation
+    if(service === 'fence'){
+      if (height === '' || isNaN(height) || Number(height) < 4 || Number(height) > 8) {
+        alert('Please enter a fence height between 4 and 8 feet.');
+        fenceHeightInput.focus();
+        return;
+      }
+    }
+
+    nextStep(3);
+  }
+
+  // Validate Step 3 inputs before calculating quote
+  function validateAndQuote() {
+    const email = document.getElementById('userEmail').value.trim();
+    const phone = document.getElementById('userPhone').value.trim();
+
+    if (!email.includes("@")) {
+      alert("Please enter a valid email address.");
+      return;
+    }
+    if (!/^\d+$/.test(phone)) {
+      alert("Phone number should contain numbers only.");
+      return;
+    }
+
+    calculateQuote();
+  }
+
+  // Calculate quote and show summary
   function calculateQuote() {
     let total = 0;
     const service = document.getElementById('service').value;
     const name = document.getElementById('userName').value;
+    const email = document.getElementById('userEmail').value;
     const phone = document.getElementById('userPhone').value;
     const type = document.getElementById('fenceType').value;
     const height = parseInt(document.getElementById('fenceHeight').value);
@@ -152,45 +179,69 @@
     const gates = parseInt(document.getElementById('gates').value) || 0;
     const removal = document.getElementById('fenceRemoval').value;
 
-    const prices = { wood: 30, vinyl: 45, chainlink: 25 };
-    let pricePerFoot = prices[type];
-    if (height > 6) pricePerFoot += 5;
-    if (postMaterial === 'metal') pricePerFoot += 10;
-
-    total = pricePerFoot * length + (gates * 150);
-    if (removal === 'yes') total += 8 * length;
-
-    const summary = `
+    let summary = `
 Name: ${name}
+Email: ${email}
 Phone: ${phone}
-Service: Fence
-Fence Type: ${type}
-Height: ${height} ft
-Post Material: ${postMaterial}
+Service: ${service === 'fence' ? 'Fence Installation' : 'Fence Repair'}
 Length: ${length} ft
-Gates: ${gates}
-Old Fence Removal: ${removal}
+Number of Gates: ${gates}
 `;
 
+    if(service === 'fence'){
+      // Base prices per foot for fence type
+      const prices = { wood: 30, vinyl: 45, chainlink: 25 };
+      let pricePerFoot = prices[type] || 30;
+
+      // Additional cost for height over 6 ft
+      if (height > 6) pricePerFoot += 5;
+
+      // Additional cost for metal posts
+      if (postMaterial === 'metal') pricePerFoot += 10;
+
+      total = pricePerFoot * length + (gates * 150);
+
+      if (removal === 'yes') total += 8 * length;
+
+      summary += `
+Fence Type: ${type.charAt(0).toUpperCase() + type.slice(1)}
+Height: ${height} ft
+Post Material: ${postMaterial.charAt(0).toUpperCase() + postMaterial.slice(1)}
+Old Fence Removal: ${removal.charAt(0).toUpperCase() + removal.slice(1)}
+`;
+    } else if(service === 'repair'){
+      // Simplified pricing for fence repair
+      // e.g. $20 per foot and $100 per gate repair
+      total = (20 * length) + (100 * gates);
+
+      summary += `
+(Note: Repair pricing is approximate and may vary after inspection)
+`;
+    }
+
+    // Display quote and summary
     document.getElementById('quoteOutput').textContent = `Estimated Cost: $${total.toLocaleString()} CAD`;
     document.getElementById('quoteSummary').innerHTML = summary.replace(/\n/g, '<br>');
 
+    // Send email via EmailJS
     emailjs.send("service_p70pt76", "template_6ivswkm", {
       user_name: name,
+      user_email: email,
       user_phone: phone,
       service: service,
       quote_date: new Date().toLocaleString(),
       quote_total: `$${total.toLocaleString()} CAD`,
       quote_details: summary
     }).then(() => {
-      console.log("Email sent");
-    }).catch(err => {
-      console.error("Email failed", err);
+      console.log('Email sent successfully!');
+    }, (err) => {
+      console.error('Failed to send email:', err);
     });
 
     nextStep(4);
   }
 
+  // Generate and download PDF with quote details
   async function downloadPDF() {
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF();
@@ -200,12 +251,14 @@ Old Fence Removal: ${removal}
     const quote = document.getElementById('quoteOutput').textContent;
     const summary = document.getElementById('quoteSummary').innerText;
 
-    doc.setFillColor(42, 157, 143);
+    // Header
+    doc.setFillColor(139, 94, 60);
     doc.rect(0, 0, 210, 20, 'F');
     doc.setTextColor(255, 255, 255);
     doc.setFontSize(18);
     doc.text("Fence Quote Estimate", 105, 13, null, null, 'center');
 
+    // Customer info
     doc.setTextColor(0);
     doc.setFontSize(14);
     doc.text("Customer Information", 14, 30);
@@ -214,24 +267,121 @@ Old Fence Removal: ${removal}
     doc.text(`Phone: ${phone}`, 14, 45);
     doc.text(`Date: ${new Date().toLocaleDateString()}`, 14, 52);
 
+    // Project details
     doc.setFontSize(14);
     doc.text("Project Details", 14, 65);
     doc.setFontSize(12);
     const lines = doc.splitTextToSize(summary, 180);
     doc.text(lines, 14, 72);
 
+    // Quote
     doc.setFontSize(14);
     doc.text("Estimated Cost", 14, 140);
     doc.setFontSize(16);
-    doc.setTextColor(42, 157, 143);
+    doc.setTextColor(139, 94, 60);
     doc.text(quote, 14, 148);
 
-    doc.setFontSize(10);
-    doc.setTextColor(150);
-    doc.text("This quote is an estimate and may vary after site inspection.", 14, 280);
-
-    doc.save("Fence_Quote.pdf");
+    // Save PDF
+    doc.save(`FenceQuote_${name.replace(/\s+/g, '_')}.pdf`);
   }
+</script>
+</head>
+<body>
+
+<div class="container">
+
+  <div class="logo-wrapper">
+    <img class="logo" src="https://i.fbcd.co/products/original/8c6cd65c0698b30450038e11edf0f1902303cf3ba8d199a6d17d58a83e71b711.jpg" alt="Fence Logo" />
+  </div>
+
+  <h2>Get Your Fence Quote</h2>
+
+  <!-- Step 1 -->
+  <div class="step active" id="step1">
+    <label for="service">Select Service</label>
+    <select id="service" name="service">
+      <option value="fence" selected>Fence Installation</option>
+      <option value="repair">Fence Repair</option>
+    </select>
+    <button type="button" onclick="nextStep(2)">Next</button>
+  </div>
+
+  <!-- Step 2 -->
+  <div class="step" id="step2">
+    <label for="fenceType">Fence Type</label>
+    <select id="fenceType" name="fenceType">
+      <option value="wood">Wood</option>
+      <option value="vinyl">Vinyl</option>
+      <option value="chainlink">Chain Link</option>
+    </select>
+
+    <label for="fenceHeight">Fence Height (ft)</label>
+    <input type="number" id="fenceHeight" name="fenceHeight" min="4" max="8" value="6" />
+
+    <label for="postMaterial">Post Material</label>
+    <select id="postMaterial" name="postMaterial">
+      <option value="wood">Wood</option>
+      <option value="metal">Metal</option>
+    </select>
+
+    <label for="fenceLength">Total Fence Length (ft)</label>
+    <input type="number" id="fenceLength" name="fenceLength" placeholder="e.g. 100" />
+
+    <label for="gates">Number of Gates</label>
+    <input type="number" id="gates" name="gates" min="0" max="5" value="0" />
+
+    <label for="fenceRemoval">Old Fence Removal</label>
+    <select id="fenceRemoval" name="fenceRemoval">
+      <option value="no">No</option>
+      <option value="yes">Yes</option>
+    </select>
+
+    <div class="btn-group">
+      <button type="button" onclick="prevStep(1)">Back</button>
+      <button type="button" onclick="validateStep2AndNext()">Next</button>
+    </div>
+  </div>
+
+  <!-- Step 3 -->
+  <div class="step" id="step3">
+    <label for="userName">Your Name</label>
+    <input type="text" id="userName" name="userName" placeholder="John Doe" />
+
+    <label for="userEmail">Your Email</label>
+    <input type="email" id="userEmail" name="userEmail" placeholder="example@mail.com" />
+
+    <label for="userPhone">Phone Number</label>
+    <input type="tel" id="userPhone" name="userPhone" placeholder="1234567890" />
+
+    <div class="btn-group">
+      <button type="button" onclick="prevStep(2)">Back</button>
+      <button type="button" onclick="validateAndQuote()">Get Quote</button>
+    </div>
+  </div>
+
+  <!-- Step 4 - Results -->
+  <div class="step" id="step4">
+    <div id="quoteOutput" style="font-weight:bold; font-size:1.4em; color:#7a4e20; margin-bottom: 10px;"></div>
+    <div class="summary" id="quoteSummary" style="white-space: pre-wrap;"></div>
+    <button type="button" onclick="downloadPDF()">Download Quote as PDF</button>
+    <button type="button" onclick="showStep(1)" style="margin-left:10px;">Start Over</button>
+  </div>
+
+</div>
+
+<script>
+  // Show/hide height input based on service selected
+  document.getElementById('service').addEventListener('change', function() {
+    const service = this.value;
+    const heightInput = document.getElementById('fenceHeight');
+    if(service === 'repair') {
+      heightInput.disabled = true;
+      heightInput.value = '';
+    } else {
+      heightInput.disabled = false;
+      heightInput.value = 6;
+    }
+  });
 </script>
 
 </body>
